@@ -1,5 +1,11 @@
 2012-08-16	The InnoDB Team
 
+	* btr/btr0cur.c:
+	Fix Bug#12595091 POSSIBLY INVALID ASSERTION IN
+	BTR_CUR_PESSIMISTIC_UPDATE()
+
+2012-08-16	The InnoDB Team
+
 	* btr/btr0btr.c, btr/btr0cur.c:
 	Fix Bug#12845774 OPTIMISTIC INSERT/UPDATE USES WRONG HEURISTICS FOR
 	COMPRESSED PAGE SIZE
